...
  Client client = Client();

  Future<String> login(String email, String password) async {
    Map result = {};
    try {
      Response response = await client.post(
        Uri.parse('$baseUrl/login'),
        body: jsonEncode({
          'email': email,
          'password': password,
        }),
        headers: commonHeaders,
      );
      result = const JsonDecoder().convert(response.body);
    } catch (e) {
      result['error'] = '登录失败\n 错误信息为 $e';
...
